[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "MyPackageTutorial"
version = "0.0.1"
license = {file="LICENSE"}
authors = [
    {name="Jalen Merluza", email="Jalen.Merluza@cabelas.ca"}
]
description="Motivational Quote Generator"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/j-merluza/motivator"